--- a/toolkits/global/packages/global-customer-satisfaction-input/demo/main.scss
+++ b/toolkits/global/packages/global-customer-satisfaction-input/demo/main.scss
@@ -3,13 +3,8 @@
 @import '../node_modules/@springernature/brand-context/springer/scss/core.scss';
 @import '../node_modules/@springernature/brand-context/springer/scss/enhanced.scss';
 
-// Global Forms SCSS
-@import '../node_modules/@springernature/global-forms/scss/00-tokens/default.tokens.scss';
-@import '../node_modules/@springernature/global-forms/scss/50-components/forms';
-
 // Component SCSS
-@import '../scss/00-tokens/default.tokens.scss';
-@import '../scss/30-mixins/customer-satisfaction-input-button';
+@import '../scss/10-settings/default.scss';
 @import './scss/demo-page-layout';
 @import '../scss/50-components/customer-satisfaction-input';
 
