[AK] Add spellcheck attribute so it can be used as input parameter

--- a/toolkits/global/packages/global-forms/view/globalFormAttributes.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormAttributes.hbs
@@ -11,6 +11,7 @@
 {{#if minlength}} minlength="{{minlength}}"{{/if}}
 {{#unless autocomplete}} autocomplete="off"{{/unless}}
 {{#if autocomplete}} autocomplete="{{autocomplete}}"{{/if}}
+{{#if spellcheck}} spellcheck="{{spellcheck}}"{{/if}}
 {{#if novalidate}} novalidate{{/if}}
 {{#if datalist.id}} list="{{datalist.id}}"{{/if}}
 {{#if accept}} accept="{{accept}}"{{/if}}
