Use a span rather than div inside Summary, as div not allowed

--- a/toolkits/global/packages/global-details/scss/50-components/details.scss
+++ b/toolkits/global/packages/global-details/scss/50-components/details.scss
@@ -59,7 +59,7 @@
 
 /* ↓ Complex selector necessary to ensure
 nested icons are not rotated */
-.c-details > [open] > summary > div > .u-icon {
+.c-details > [open] > summary > .u-icon {
 	transform: rotate(90deg);
 }
 
