ak: override focus color for nature brand-context

--- a/context/brand-context/nature/scss/10-settings/colors/default.scss
+++ b/context/brand-context/nature/scss/10-settings/colors/default.scss
@@ -37,7 +37,8 @@ $context--colors: (
 	'nature-secondary': #a12a3f,
 	'nature-tertiary': #d7c8c8,
 	'action-base': #004b83,
-	'action-light': scale-color(#004b83, $lightness: 10%)
+	'action-light': scale-color(#004b83, $lightness: 10%),
+	'focus-color': #0088cc // accessible focus color from elements single package
 );
 
 // nature sub-brands
@@ -175,4 +176,4 @@ $subject-areas-colors: (
 	'scientific-community-society-secondary': #fcf0f7
 );
 
-$context--focus-color: color(lemon);
+$context--focus-color: map-get($context--colors, focus-color);
